--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,11 @@ services:
       dockerfile: Dockerfile
     volumes: 
         - ./:/workspace
-    
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     tty: true
